// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query widget filters should return filters for insight with ignored attribute filter 1`] = `
Array [
  Object {
    "absoluteDateFilter": Object {
      "dataSet": Object {
        "uri": "/gdc/md/referenceworkspace/obj/557",
      },
      "from": "2012-01-01",
      "to": "2019-01-01",
    },
  },
]
`;

exports[`query widget filters should return filters for insight with ignored date filter 1`] = `
Array [
  Object {
    "negativeAttributeFilter": Object {
      "displayForm": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "notIn": Object {
        "uris": Array [
          "/gdc/md/referenceworkspace/obj/1088/elements?id=460490",
        ],
      },
    },
  },
]
`;

exports[`query widget filters should return filters for insight with no ignored filters 1`] = `
Array [
  Object {
    "absoluteDateFilter": Object {
      "dataSet": Object {
        "uri": "/gdc/md/referenceworkspace/obj/557",
      },
      "from": "2012-01-01",
      "to": "2019-01-01",
    },
  },
  Object {
    "negativeAttributeFilter": Object {
      "displayForm": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "notIn": Object {
        "uris": Array [
          "/gdc/md/referenceworkspace/obj/1088/elements?id=460490",
        ],
      },
    },
  },
]
`;

exports[`query widget filters should return filters for kpi with ignored attribute filter 1`] = `
Array [
  Object {
    "absoluteDateFilter": Object {
      "dataSet": Object {
        "uri": "/gdc/md/referenceworkspace/obj/557",
      },
      "from": "2012-01-01",
      "to": "2019-01-01",
    },
  },
]
`;

exports[`query widget filters should return filters for kpi with ignored date filter 1`] = `
Array [
  Object {
    "negativeAttributeFilter": Object {
      "displayForm": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "notIn": Object {
        "uris": Array [
          "/gdc/md/referenceworkspace/obj/1088/elements?id=460490",
        ],
      },
    },
  },
]
`;

exports[`query widget filters should return filters for kpi with no ignored filters 1`] = `
Array [
  Object {
    "absoluteDateFilter": Object {
      "dataSet": Object {
        "uri": "/gdc/md/referenceworkspace/obj/557",
      },
      "from": "2012-01-01",
      "to": "2019-01-01",
    },
  },
  Object {
    "negativeAttributeFilter": Object {
      "displayForm": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "notIn": Object {
        "uris": Array [
          "/gdc/md/referenceworkspace/obj/1088/elements?id=460490",
        ],
      },
    },
  },
]
`;
